--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -18,7 +18,7 @@
 
         <!-- Top navigation bar  -->
         <div class = "logo">
-            <img src="/Images/Logo.png">
+            <img alt="logo" src="/Images/Logo.png">
         </div>
 
         <!-- Menu bar items  -->
@@ -26,7 +26,6 @@
 
             <a href = "/Html/index.html">Home</a>
             <a href ="#">About</a>
-            <a href = "#">Servcies</a>
             <a href = "#">Projects</a>
 
         </nav>
@@ -34,13 +33,13 @@
     </header>
 
     <section>
-        <img class = "contact-img" src="/Images/contact logo.jpg"/>
+        <img class = "contact-img" alt="contact-img" src="/Images/contact logo.jpg" />
     </section>
 
-    <!-- Social madia -->
+    <!-- Social media -->
     <section data-scroll-into-view = "slide-in-up-group">
         <div>
-            <img class="profile-img" src="/Images/Profile image.jpg" />
+            <img class="profile-img" src="/Images/Profile image.jpg" alt="profile-img" />
             <div class="social-madia">
                 <a href="https://www.linkedin.com/in/kobi-sabah-836324105/">LinkedIn</a>
                 <a href="https://github.com/kobiSabah">Github</a>
