--- a/Html/index.html
+++ b/Html/index.html
@@ -18,14 +18,13 @@
 
         <!-- Top navigation bar  -->
         <div class = "logo">
-            <img src="/Images/Logo.png"/>
+            <img src="/Images/Logo.png" alt="logo"/>
         </div>
 
         <!-- Menu bar items  -->
         <nav class = "menu-bar">
 
             <a href ="#">About</a>
-            <a href = "#">Servcies</a>
             <a href = "/Html/Projects.html">Projects</a>
             <a href = "/Html/Contact.html">Contact</a>
 
