--- a/Html/Projects.html
+++ b/Html/Projects.html
@@ -20,7 +20,7 @@
 
         <!-- Top navigation bar  -->
         <div class = "logo">
-            <img src="/Images/Logo.png"/>
+            <img alt="logo" src="/Images/Logo.png"/>
         </div>
 
         <!-- Menu bar items  -->
@@ -28,38 +28,41 @@
 
             <a href = "/Html/index.html">Home</a>
             <a href ="#">About</a>
-            <a href = "#">Servcies</a>
             <a href = "/Html/Contact.html">Contact</a>
 
         </nav>
 
     </header>
 
-    <section data-scroll-into-view = "slide-in-up-group">
+    <section>
         <div class ="project">
+            
             <p> 
-                <img class="mask-detection"src="/Images/mask detection icon.png"/>
+                <img class="mask-detection" alt="mask-img" src="/Images/mask detection icon.png"/>
                 Object detection
-             </p>
+            </p>
+
             <blockquote>
                 This is the last project I wrote in <mark>Python</mark> and <mark> OpenCV </mark> library.<br>
-                The goal of this project is to train a model that capable to locate face mask in a single image or on webcam. <br>
-                Using a machine learning approach where a cascade function is trained from a lot of positive and negative images <br>
+                The goal of this project is to train a model that capable to locate face mask in a single image<br> 
+                or on webcam. Using a machine learning approach where a cascade function is trained<br>
+                from a lot of positive and negative images <br>
                 <a href="https://github.com/kobiSabah/Object-detection">📝github code </a> 
             </blockquote>
+
         </div>
     </section>
     
     <section data-scroll-into-view = "slide-in-up-group">
         <div class ="project">
             <p> 
-                <img class="memory-game" src="/Images/Memory game icon.png"/>
+                <img class="memory-game" alt="game-img" src="/Images/Memory game icon.png"/>
                 Memory card Game
              </p>
 
             <blockquote>
-                Classic memory card game that supports player vs player options in addition to playing against the computer mode <br>
-                This is one of my first console game project I wrote in <mark>C#</mark>.<br>
+                Classic memory card game that supports player vs player options in addition to playing <br>
+                against the computer mode. This is one of my first console game project I wrote in <mark>C#</mark>.<br>
                 Come test your memory and try to beat the computer 😉 <br>
                 <a href="https://github.com/kobiSabah/MemoryGame">📝github code </a> 
             </blockquote>
